Done Music Player

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="/assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <title>F8 JavaScript Basic</title>
     </head>
 
@@ -92,6 +92,6 @@
                 </div>
             </div>
         </div>
-        <script type="module" src="/assets/js/main.js"></script>
+        <script type="module" src="./assets/js/main.js"></script>
     </body>
 </html>
